--- a/src/app/competencias/competencias/competencias.component.css
+++ b/src/app/competencias/competencias/competencias.component.css
@@ -1,3 +1,17 @@
-table {
+  table {
     width: 100%;
+  }
+
+  .carrengando-spinner{
+    padding: 25px;
+    background-color: rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .example-button-container {
+    display: flex;
+    justify-content: center;
+    width: 50px;
   }
