--- a/src/app/competencias/competencias/competencias.component.html
+++ b/src/app/competencias/competencias/competencias.component.html
@@ -1,20 +1,38 @@
 <mat-card>
     <mat-toolbar color="primary">COMPETÊNCIA ATUAL</mat-toolbar>
-    <table mat-table [dataSource]="competencias" class="mat-elevation-z8">
+    <div *ngIf="competencias$ | async as competencias; else carrengando">
+        <table mat-table [dataSource]="competencias" class="mat-elevation-z8">
 
-        <!-- Descricao Column -->
-        <ng-container matColumnDef="descricao">
-        <th mat-header-cell *matHeaderCellDef> Descrição </th>
-        <td mat-cell *matCellDef="let competencia"> {{ competencia.descricao }} </td>
-        </ng-container>
-    
-        <!-- Valor Column -->
-        <ng-container matColumnDef="valor">
-        <th mat-header-cell *matHeaderCellDef> Valor (R$) </th>
-        <td mat-cell *matCellDef="let competencia"> {{competencia.valor}} </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <!-- Descricao Column -->
+            <ng-container matColumnDef="descricao">
+                <th mat-header-cell *matHeaderCellDef> Descrição </th>
+                <td mat-cell *matCellDef="let competencia"> {{ competencia.descricao }} </td>
+            </ng-container>
+
+            <!-- Valor Column -->
+            <ng-container matColumnDef="valor">
+                <th mat-header-cell *matHeaderCellDef> Valor (R$) </th>
+                <td mat-cell *matCellDef="let competencia"> 
+                    <mat-icon aria-hidden="false" aria-label="Categoria do Valor">{{ competencias.categorias | categorias}}</mat-icon>
+                    {{competencia.valor}}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+    <mat-toolbar >
+        <div class="example-button-container">
+            <button mat-mini-fab (click)="addLinha()" color="black" aria-label="adiciona linha">
+              <mat-icon>add_linha</mat-icon>
+            </button>
+          </div>
+    </mat-toolbar>
+
+    <ng-template #carrengando>
+        <div class="carrengando-spinner">
+            <mat-spinner></mat-spinner>
+        </div>
+    </ng-template>
+
 </mat-card>
