[FEAT]: CRUD, mecanismo plataforma e estilização

--- a/src/app/competencias/competencias/competencias.component.css
+++ b/src/app/competencias/competencias/competencias.component.css
@@ -2,6 +2,11 @@
     width: 100%;
   }
 
+  .icon-category{
+    color: red;
+    font-size: 10px;
+  }
+
   .carrengando-spinner{
     padding: 25px;
     background-color: rgba(0, 0, 0, 0.05);
@@ -14,4 +19,14 @@
     display: flex;
     justify-content: center;
     width: 50px;
+  }
+
+  .add{
+    display: flex;
+    box-sizing: border-box;
+    padding: 0px 45vw;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
   }
