--- a/src/app/competencias/competencias/competencias.component.html
+++ b/src/app/competencias/competencias/competencias.component.html
@@ -13,20 +13,39 @@
             <ng-container matColumnDef="valor">
                 <th mat-header-cell *matHeaderCellDef> Valor (R$) </th>
                 <td mat-cell *matCellDef="let competencia">
-                    <mat-icon aria-hidden="false" aria-label="Categoria do Valor">{{ competencias.categorias | categorias}}</mat-icon>
+                    <mat-icon class="icon-category" aria-hidden="false" aria-label="Categoria do Valor">{{ competencias.categorias | categorias}}</mat-icon>
                     {{competencia.valor}}</td>
+            </ng-container>
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="acoes">
+              <mat-header-cell *matHeaderCellDef>
+                <!-- <button mat-mini-fab color="primary">
+                  <mat-icon (click)="onAdd()">add</mat-icon>
+                </button> -->
+              </mat-header-cell>
+
+              <mat-cell *matCellDef="let competencia">
+                <button mat-icon-button color="primary" aria-label="Editar registro">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warning" aria-label="Remover registro">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </mat-cell>
+
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
-    <mat-toolbar >
-        <div class="example-button-container">
-            <button mat-mini-fab (click)="addLinha()" color="black" aria-label="adiciona linha">
-              <mat-icon>add_linha</mat-icon>
-            </button>
-          </div>
+    <mat-toolbar (click)="onAdd()">
+      <div class="add">
+        <button mat-mini-fab color="black" aria-label="adiciona linha">
+          <mat-icon>add_linha</mat-icon>
+        </button>
+      </div>
     </mat-toolbar>
 
     <ng-template #carrengando>
