--- a/src/app/competencias/competencias/competencias.component.css
+++ b/src/app/competencias/competencias/competencias.component.css
@@ -1,5 +1,10 @@
+
   table {
     width: 100%;
+  }
+
+  a {
+    margin-left: 2vh;
   }
 
   .icon-category{
@@ -29,4 +34,17 @@
     flex-direction: row;
     align-items: center;
     white-space: nowrap;
+  }
+
+  mat-card mat-toolbar{
+    border-radius: 4px 4px 0px 0px;
+  }
+
+  mat-sidenav-container{
+    height: 100%;
+  }
+
+  mat-sidenav{
+    width: 200px;
+    background-color: #f5f5f5;
   }
