--- a/src/app/competencias/competencias/competencias.component.html
+++ b/src/app/competencias/competencias/competencias.component.html
@@ -1,57 +1,92 @@
-<mat-card>
-    <mat-toolbar color="primary">COMPETÊNCIA ATUAL</mat-toolbar>
-    <div *ngIf="competencias$ | async as competencias; else carrengando">
-        <table mat-table [dataSource]="competencias" class="mat-elevation-z8">
+<mat-sidenav-container>
+  <mat-sidenav [(opened)]=opened mode="side">
+    <mat-list role="list">
+      <mat-list-item role="listitem" routerLink="/home">
+        <mat-icon matListItemIcon>home</mat-icon>
+        <a>Home</a>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item role="listitem" routerLink="/competencias">
+        <mat-icon matListItemIcon>dashboard</mat-icon>
+        <a>Dashboard</a>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item role="listitem" routerLink="/competencias">
+        <mat-icon matListItemIcon>account_balance</mat-icon>
+        <a>Finane Control</a>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item role="listitem" routerLink="/competencias">
+        <mat-icon matListItemIcon>new_releases</mat-icon>
+        <a>Coming Soon!</a>
+      </mat-list-item>
+    </mat-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-card>
+      <button mat-icon-button color="primary" (click)="opened=!opened">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" routerLink="/home">
+        <mat-icon>home</mat-icon>
+      </button>
+    </mat-card>
+    <mat-card>
+        <mat-toolbar color="primary">Finanças</mat-toolbar>
+        <div *ngIf="competencias$ | async as competencias; else carrengando">
+            <table mat-table [dataSource]="competencias" class="mat-elevation-z8">
 
-            <!-- Descricao Column -->
-            <ng-container matColumnDef="descricao">
-                <th mat-header-cell *matHeaderCellDef> Descrição </th>
-                <td mat-cell *matCellDef="let competencia"> {{ competencia.descricao }} </td>
-            </ng-container>
+                <!-- Descricao Column -->
+                <ng-container matColumnDef="descricao">
+                    <th mat-header-cell *matHeaderCellDef> Descrição </th>
+                    <td mat-cell *matCellDef="let competencia"> {{ competencia.descricao }} </td>
+                </ng-container>
 
-            <!-- Valor Column -->
-            <ng-container matColumnDef="valor">
-                <th mat-header-cell *matHeaderCellDef> Valor (R$) </th>
-                <td mat-cell *matCellDef="let competencia">
-                    <mat-icon class="icon-category" aria-hidden="false" aria-label="Categoria do Valor">{{ competencias.categorias | categorias}}</mat-icon>
-                    {{competencia.valor}}</td>
-            </ng-container>
+                <!-- Valor Column -->
+                <ng-container matColumnDef="valor">
+                    <th mat-header-cell *matHeaderCellDef> Valor (R$) </th>
+                    <td mat-cell *matCellDef="let competencia">
+                        <mat-icon class="icon-category" aria-hidden="false" aria-label="Categoria do Valor">{{ competencias.categorias | categorias}}</mat-icon>
+                        {{competencia.valor}}</td>
+                </ng-container>
 
-            <!-- Action Column -->
-            <ng-container matColumnDef="acoes">
-              <mat-header-cell *matHeaderCellDef>
-                <!-- <button mat-mini-fab color="primary">
-                  <mat-icon (click)="onAdd()">add</mat-icon>
-                </button> -->
-              </mat-header-cell>
+                <!-- Action Column -->
+                <ng-container matColumnDef="acoes">
+                  <mat-header-cell *matHeaderCellDef>
+                    <!-- <button mat-mini-fab color="primary">
+                      <mat-icon (click)="onAdd()">add</mat-icon>
+                    </button> -->
+                  </mat-header-cell>
 
-              <mat-cell *matCellDef="let competencia">
-                <button mat-icon-button color="primary" aria-label="Editar registro">
-                  <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warning" aria-label="Remover registro">
-                  <mat-icon>delete</mat-icon>
-                </button>
-              </mat-cell>
+                  <mat-cell *matCellDef="let competencia">
+                    <button mat-icon-button color="primary" aria-label="Editar registro">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warning" aria-label="Remover registro">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </mat-cell>
 
-            </ng-container>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </div>
-    <mat-toolbar (click)="onAdd()">
-      <div class="add">
-        <button mat-mini-fab color="black" aria-label="adiciona linha">
-          <mat-icon>add_linha</mat-icon>
-        </button>
-      </div>
-    </mat-toolbar>
-
-    <ng-template #carrengando>
-        <div class="carrengando-spinner">
-            <mat-spinner></mat-spinner>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
         </div>
-    </ng-template>
+        <mat-toolbar (click)="onAdd()">
+          <div class="add">
+            <button mat-mini-fab color="black" aria-label="adiciona linha">
+              <mat-icon>add_linha</mat-icon>
+            </button>
+          </div>
+        </mat-toolbar>
 
-</mat-card>
+        <ng-template #carrengando>
+            <div class="carrengando-spinner">
+                <mat-spinner></mat-spinner>
+            </div>
+        </ng-template>
+
+    </mat-card>
+  </mat-sidenav-content>
+</mat-sidenav-container>
